2008-11-20  Christopher Bratusek <nano-master@gmx.de>
	* lisp/sawfish/wm/autoload.jl: load all keybindings

	* lisp/sawfish/wm/viewport.jl: forgot one hunk of the viewport scroll feature

	* lisp/sawfish/wm/viewport.jl: added viewport boundary

2008-11-19  Christopher Bratusek <nano-master@gmx.de>
	* man/sawmill.texi: Updated Documentation [Derek Upham]

	* */*: remove ^L [Teika Kazura]

	* MAINTAINERS: updated

	* theme/Crux/theme.jl: Added two new button layouts:
	Complete and Complete-Inverse

2008-11-18  Christopher Bratusek <nano-master@gmx.de>
	* config.sub
	* config.guess: updated both files

	* src/windows.c: another small clean-up

	* lisp/sawfish/wm/windows.jl
	* lisp/sawfish/wm/commands/move-resize.jl: Honour ICCCM Aspect Ratio [Andrea Vetorello]

	* lisp/sawfish/wm/viewport.jl: Added Animated Viewport Scrolling [Fernando Carmona Varo]

2008-11-03  Christopher Bratusek <nano-master@gmx.de>
	* configure.in: minimum pango version is 1.8.0

2008-08-29  Janek Kozicki <cosurgi@gmail.com>
	* lisp/sawfish/wm/commands/grow-pack.jl
	* lisp/sawfish/wm/stacking.jl
	* lisp/sawfish/wm/util/rects.jl: Add stacking visibility patch by Timo
	Korvola. This fixes raise-lower window problems with xcomposite
	extension.

	* lisp/sawfish/wm/state/maximize.jl: Add maximize fullscreen xinerama
	patch by Jonathan Sambrook (Uploaded by Christopher Bratusek)

2008-08-07  Christopher Bratusek <nano-master@gmx.de>
	* themes/Makefile.in: install Elberg-tabbed 

2008-08-07  Scott Scriven <sawfish@toykeeper.net>
	* themes/Elberg-tabbed/: added Elberg-tabbed theme

2008-08-06  Guillermo S. Romero <gsromero@svn.gnome.org>
	* lisp/sawfish/wm/commands/x-cycle.jl
	* man/sawmill.texi: added after-cycle-step-hook and related docs,
	originally by Teika kazura. Changed some white space in the
	process.

2008-08-05  Timo Korvola <tkorvola@svn.gnome.org>
	* src/windows.c, man/sawmill.texi: Call property
	handlers in window-remprop. Make window-plist return
	the list itself not a copy
