@@ -5,6 +5,8 @@
 
 	* lisp/sawfish/wm/viewport.jl: added viewport boundary
 
+	* lisp/sawfish/wm/ext/error-handler.jl: added error-handler "both"
+
 2008-11-19  Christopher Bratusek <nano-master@gmx.de>
 	* man/sawmill.texi: Updated Documentation [Derek Upham]
 
